[package]
name = "daw-reabs"
version = "0.1.0"
edition = "2021"
description = "A Rust-based digital audio workstation"

[[bin]]
name = "daw-reabs"
path = "src/main.rs"

[features]
# Enable real-time audio I/O (requires libasound2-dev / pkg-config on Linux).
audio = ["dep:cpal", "dep:crossbeam-channel"]

[dependencies]
cpal = { version = "0.15", optional = true }
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = { version = "0.5", optional = true }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
